<resources>
    <string name="app_name">EmployeeList</string>
    <string name="employee_list">Employee List</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="emp_id">Emp ID</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="notification">Notification</string>
    <string name="search_employee">Search Employee</string>
    <string name="back">back</string>
    <string name="employees">Employees</string>
    <string name="_50">50</string>
    <string name="name2">Name</string>
    <string name="emp_id2">Emp ID</string>
    <string name="gender2">Gender</string>
    <string name="email2">Email</string>
    <string name="phone2">phone</string>
    <string name="shift_time">Shift time</string>
    <string name="hired_time">Hired Time</string>
    <string name="actions">Actions</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="high_performer_employee">High Performer Employee</string>
    <string name="name3">Name</string>
    <string name="total_task">Total Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="task">Task</string>
    <string name="id">ID</string>
    <string name="inprocess">Inprocess</string>
    <string name="all_employee">All Employee</string>
    <string name="third_party_integrations">Third party Integrations</string>
    <string name="platform">Platform</string>
    <string name="appid">AppID</string>
    <string name="ads_id">Ads ID</string>
    <string name="update">Update</string>
    <string name="id2">id</string>
    <string name="add_app_secrets">Add App Secrets :</string>
    <string name="platform2">Platform:</string>
    <string name="facebook_instagram"><![CDATA[Facebook & Instagram]]></string>
    <string name="app_id">App Id</string>
    <string name="appid2">appId</string>
    <string name="app_secret">App Secret</string>
    <string name="token_or_url">Token OR Url</string>
    <string name="ads_id2">Ads Id</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
</resources>