<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/blue">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/arrow_back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back" />


        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/menu"
            android:layout_below="@+id/back"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/notification" />
    </RelativeLayout>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activityName"
        android:layout_width="162sp"
        android:layout_height="29sp"
        android:text="@string/employee_list"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textSize="22sp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="20.14dp"
        android:layout_height="20.67dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8"
        android:padding="5dp"
        android:src="@drawable/notifications"
        android:background="@android:color/transparent"
        android:contentDescription="@string/notification" />


</LinearLayout>