<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchcontacts"
            android:layout_width="339dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="10dp"
            android:layout_gravity="center"
            android:hint="@string/search_contact"
            android:textColorHint="#8C8C8C"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_bar"
            android:autofillHints="search contact" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchcontacts">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="701dp"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:background="@color/gray2"
                    android:padding="5dp"
                    tools:layout_editor_absoluteX="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/name"
                        android:layout_marginStart="15sp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/emp_id"
                        android:layout_marginStart="30sp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:layout_marginStart="30sp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/email"
                        android:layout_marginStart="100sp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/phone"
                        android:layout_marginStart="80sp"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="vertical">


                    <androidx.recyclerview.widget.RecyclerView
                        layout="@layout/recycler_view"
                        android:id="@+id/myRecyclerViewLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"/>

                </LinearLayout>


            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</LinearLayout>